# cplus

./: .gitignore  .markdownlint.jsonc  CLAUDE.md  CMakeLists.txt  Device.gen.c  Device.gen.h  IStartable.h  Motor.gen.c  Motor.gen.h  README.md  demo.cplus.h  do_tests.sh  failed.txt  results.txt
.github/: copilot-instructions.md
docs/: Checkpoint.md  Roadmap.md  architecture.md  build-flags.md  c_grammar.mpc  coding-style.md  cplus_specs.md  grammar-v1.mpc.bak  grammar.bnf  grammar.md  grammar.mpc  grammar_v0.1.mpc  roadmap.md  spec-v1.md  spec-v2.md
examples/: main.cplus  main.out.c  person  person.c  person.hplus  person.out.h
gen_parser/: Makefile  gen_parser
gen_parser/src/: main.c
inc/: cplus.h
matrix/: Makefile  main.c  matrix.c
matrix/src/: main.c  matrix.c  matrix.h
parser/: Makefile  parser
parser/docs/: cplus_specs.md
parser/inc/: cplus.h
parser/src/: ast.h  ast_dummy.c  ast_pretty.c  ast_transf.c  main.c  parser_minimo.c.bak
src/: ast.c  ast.h  compiler_validator.c  compiler_validator.h  diagnostics.c  diagnostics.h  lexer.c  lexer.h  main.c  pipeline.c  pipeline.h  strbuf.c  strbuf.h
tests/: 00_basic_interface.cplus.h  01_interface_params.cplus.h  02_class_fields_methods_sections.cplus.h  03_class_members_outside_sections.cplus.h  04_generics_list_map.cplus.h  05_mixed_interfaces_classes.cplus.h  06_whitespace_and_comments.cplus.h  09_extends_implements.cplus.h  10_generics_typename_arrays.cplus.h  12_forwards_and_use.cplus.h  13_c_chunk_mixed.cplus.h  14_arrays_pointers_mix.cplus.h  16_c_multiline_decl.cplus.h  17_c_close_brace_alone.cplus.h  README.md  demo.cp  demo.cp.h  demo_all_inclusive.cplus  demo_main.cplus  mini.cplus.h  test_golden_invalid.c  test_golden_invalid_clang.c  test_golden_valid.c  test_golden_valid_clang.c  test_lexer.c  test_pipeline_failure.c  test_pipeline_success.c
tests/failed/: 01_missing_semicolon.cplus.h  02_class_no_brace.cplus.h  03_interface_field.cplus.h  04_double_access_modifier.cplus.h  05_bad_generic_syntax.cplus.h  06_typedef_wrong.cplus.h  07_class_header_incomplete.cplus.h  08_typedef_class_missing_name.cplus.h  09_two_access_mods.cplus.h
tests/fixtures/: invalid_syntax.cplus  v2_class_nested.cplus  v2_class_simple.cplus  v2_class_simple.expected.c  v2_e201_keyword_as_ident.cplus  v2_e202_unique_no_init.cplus  v2_e203_unique_copy.cplus  v2_e204_move_non_unique.cplus  v2_e205_access_modifier.cplus  v2_e206_class_in_function.cplus  v2_move.cplus  v2_move.expected.c  v2_struct_nested.cplus  v2_struct_nested.expected.c  v2_struct_simple.cplus  v2_unique_custom_dtor.cplus  v2_unique_custom_dtor.expected.c  v2_unique_default_dtor.cplus  v2_unique_default_dtor.expected.c  v2_weak_explicit.cplus  v2_weak_explicit.expected.c  valid_simple.cplus
tests/passed/: 02_class_fields_methods_sections.cplus.h  03_class_members_outside_sections.cplus.h  06_whitespace_and_comments.cplus.h  07_interface_basic.cplus.h  08_class_access_static.cplus.h  11_typedef_class_interface.cplus.h  15_c_chunk_blocks.cplus.h  18_param_array_tiny.cplus.h
vscode-cplus-lint/: README.md  extension.js  language-configuration.json  package.json
vscode-cplus-lint/syntaxes/: cplus-injection.tmLanguage.json  cplus.tmLanguage.json  hplus.tmLanguage.json
